alignments and banner images changes

--- a/src/app/fixed-surgical-packages/fixed-surgical-packages.component.html
+++ b/src/app/fixed-surgical-packages/fixed-surgical-packages.component.html
@@ -2,11 +2,12 @@
 <section class="bg-white">
   <div class="container-fluid p-0">
     <div class="banner">
-      <img src="assets/images/fixed_surgery_package.jpg" class="img-fluid w-100" alt="Fixed Surgery Banner" />
+      <img src="assets/images/fixed_surgery_package.jpg" class="img-fluid w-100 d-none d-md-block" alt="Fixed Surgery Banner" />
+      <img src="assets/images/fixed_surgery_package_mobile.jpg" class="img-fluid w-100 d-block d-md-none" alt="Fixed Surgery Banner" />
     </div>
     <div class="text-center text-black mt-2">
       <h2><strong>Fixed Surgery Package</strong></h2>
-      <p class="mt-2 text-center mx-5">
+      <p class="mt-2 text-center mx-lg-5">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
