--- a/src/app/our-doctors/our-doctors.component.html
+++ b/src/app/our-doctors/our-doctors.component.html
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="my-3 text-center text-md-start">
-                            <button class="button_radius py-2 px-4 w-md-auto" (click)="goToBookAppointment()">
+                            <button class="button_radius py-2 px-4 w-md-auto book-appointment-btn" (click)="goToBookAppointment()">
                                 Book Appointment
                             </button>
                         </div>
